@@ -1,3 +1,8 @@
+2010-10-06  jjennings  <${AuthorEmail}>
+
+	* testLDAPUser.cs: Broke tests out into more manageable and
+	  best practices.
+
 2010-08-16  Jared L Jennings  <jaredljennings@gmail.com>
 
 	* testLDAPUser.cs: new tests for ndsHomeDirectory
